test_yuriiq/catalog/language/russian/account/recurring.php
<?php

// text
$_['text_transaction_outstanding_failed']	= 'Платеж не прошел';
$_['text_status_inactive']	= 'Не активен';
$_['text_account']	= 'Аккаунт';
$_['text_transaction_cancelled']	= 'Отменен';
$_['text_empty']	= 'Не найден платежный профиль';
$_['text_transaction_suspended']	= 'Заморожен';
$_['text_date_added']	= 'Создан: ';
$_['text_transaction_outstanding_payment']	= 'Непоступивший платеж';
$_['text_status_suspended']	= 'Заморожен';
$_['text_empty_transactions']	= 'Нет переводов для этого профиля';
$_['text_status_active']	= 'Активен';
$_['text_recurring']	= 'Регулярные платежи';
$_['text_transaction_skipped']	= 'Платеж пропущен';
$_['text_quantity']	= 'Количество: ';
$_['text_recurring_id']	= 'ID Профиля: ';
$_['text_transaction_failed']	= 'Проблема с оплатой';
$_['text_transaction_suspended_failed']	= 'Заморожен из-за неудачного платежа';
$_['text_transaction_created']	= 'Создан';
$_['text_status']	= 'Статус: ';
$_['text_order']	= 'Заказ: ';
$_['text_transactions']	= 'Переводы';
$_['text_transaction_expired']	= 'Истек';
$_['text_status_cancelled']	= 'Отменен';
$_['text_action']	= 'Действие';
$_['text_recurring_description']	= 'Описание: ';
$_['text_transaction_payment']	= 'Платеж';
$_['text_status_pending']	= 'Ожидает';
$_['text_ref']	= 'Сноска: ';
$_['text_product']	= 'Товар: ';
$_['text_payment_method']	= 'Метод оплаты: ';
$_['text_recurring_detail']	= 'Детали регулярного платежа';
$_['text_status_expired']	= 'Истек';
$_['text_confirm_cancel']	= 'Вы уверены, что хотите отключить свой профиль?';

// error
$_['error_not_found']	= 'Нельзя отключить профиль';
$_['error_not_cancelled']	= 'Ошибка: %s';

// button
$_['button_continue']	= 'Продолжить';
$_['button_view']	= 'Просмотр';
$_['button_cancel_profile']	= 'Завершить платежи';
$_['button_return']	= 'Возврат';

// column
$_['column_amount']	= 'Итого';
$_['column_profile_id']	= 'ID Профиля';
$_['column_created']	= 'Создан';
$_['column_type']	= 'Тип';
$_['column_product']	= 'Товар';
$_['column_status']	= 'Статус';
$_['column_action']	= 'Действие';

// success
$_['success_cancelled']	= 'Регулярный платеж был закрыт';

// heading
$_['heading_title']	= 'Регулярные платежи';
?>